syntax = "proto3";

package pb;

option go_package = ".;___pb";

import "proto/user.proto";

message CreateUserRequest{
    User user = 1;
}

message CreateUserResponse{
    string message = 1;
    string name = 2;
    string user_name = 3;
}

service UserService{
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
}
